[package]
name = "apropos-rs"
version = "0.1.0"
edition = "2024"
description = "Multithreaded full-text search over manpages (man -K style)"
license = "MIT"
readme = "README.md"
keywords = ["apropos", "man", "manpages", "search", "cli"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.85"

[dependencies]
anyhow = "1"
bzip2 = "0.6"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
memchr = "2"
rayon = "1"
regex = "1"
walkdir = "2"
xz2 = "0.1"
zstd = "0.13"
